enlace de contacto y arreglos colores

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "lucide-react": "^0.507.0",
     "motion": "^12.10.1",
     "next": "15.3.1",
+    "or": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scroll": "^1.8.6",
     "tailwind-merge": "^3.2.0",
     "yup": "^1.6.1",
     "zod": "^3.24.4",
